--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export -o webDist/",
-    "start": "next start",
-    "deploy": "next build && next export -o webDist/ node ./sync-to-s3.js"
+    "start": "next start -p 3005",
+    "deploy": "next build && next export -o webDist/ && node ./sync-to-s3.js"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
