--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-paginate": "^8.1.4",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
   },
