--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "node-fetch": "^3.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-paginate": "^8.1.4",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "require-from-url": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
